Fix preview alignment in Header

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -9,6 +9,7 @@ $thumbnail-size: 46;
 
 	&-Preview {
 		display: flex;
+		align-items: center;
 
 		&_user {
 			margin-right: 30px;
